--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.30.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/generative-ai": "^0.24.1"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
