fix: Update module imports and PWA manifest
Refactors module imports to use esm.sh for React and React-DOM, and updates the PWA manifest to correctly specify the start URL. This ensures proper loading of external libraries and improves PWA behavior.

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "NEXA AI",
   "short_name": "NEXA",
-  "start_url": ".",
+  "start_url": "/index.html",
   "id": "/",
   "scope": "/",
   "display": "standalone",
