--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nexa-ai-assistant",
   "private": true,
-  "version": "9.0.1",
+  "version": "9.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:android": "vite build && npx cap sync android"
   },
   "dependencies": {
     "@google/genai": "^0.15.0",
