--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,25 @@
 {
-  "name": "NEXA AI",
+  "name": "NEXA AI Assistant",
   "short_name": "NEXA",
   "start_url": "/?source=pwa",
-  "id": "/?source=pwa",
+  "id": "nexa-ai-pwa",
   "scope": "/",
   "display": "standalone",
-  "display_override": ["window-controls-overlay", "standalone"],
+  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
   "background_color": "#000000",
   "theme_color": "#000000",
-  "description": "Your futuristic AI assistant, always ready to help.",
-  "orientation": "portrait-primary",
-  "categories": ["productivity", "utilities", "ai"],
+  "description": "Futuristic AI Assistant created by Chandan Lohave",
+  "orientation": "portrait",
+  "categories": ["productivity", "ai", "assistant"],
   "icons": [
     {
-      "src": "data:image/svg+xml,%3csvg width='192' height='192' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='512' height='512' fill='black'/%3e%3cpath d='M139.636 416V96H224.909L372.364 301.091V96H416V416H330.727L183.273 210.909V416H139.636Z' fill='%2329DFFF'/%3e%3c/svg%3e",
+      "src": "data:image/svg+xml,%3csvg width='192' height='192' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='512' height='512' rx='100' fill='black'/%3e%3cpath d='M139.636 416V96H224.909L372.364 301.091V96H416V416H330.727L183.273 210.909V416H139.636Z' fill='%2329DFFF'/%3e%3c/svg%3e",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "data:image/svg+xml,%3csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='512' height='512' fill='black'/%3e%3cpath d='M139.636 416V96H224.909L372.364 301.091V96H416V416H330.727L183.273 210.909V416H139.636Z' fill='%2329DFFF'/%3e%3c/svg%3e",
+      "src": "data:image/svg+xml,%3csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='512' height='512' rx='100' fill='black'/%3e%3cpath d='M139.636 416V96H224.909L372.364 301.091V96H416V416H330.727L183.273 210.909V416H139.636Z' fill='%2329DFFF'/%3e%3c/svg%3e",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
