--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "build:android": "vite build && npx cap sync android"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^0.15.0",
@@ -15,9 +14,6 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@capacitor/android": "^6.1.1",
-    "@capacitor/cli": "^6.1.1",
-    "@capacitor/core": "^6.1.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
