feat: Refactor AI and UI for improved performance and stability
The Gemini AI service has been updated to use more stable and appropriate model names and configurations. This includes implementing a primary and fallback model for robustness.

The UI has been refined with updated animations and styling for the "danger mode" to enhance its visual impact and clarity. Additionally, redundant configuration options and UI elements related to voice quality have been removed, streamlining the application settings.

Audio initialization has been decoupled from specific button clicks to improve user experience and ensure audio capabilities are readily available. Minor bug fixes and code cleanup have also been performed across related components.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "NEXA AI",
+  "name": "NEXA HUD",
   "short_name": "NEXA",
   "start_url": "/",
   "display": "standalone",
@@ -12,12 +12,6 @@
       "sizes": "192x192 512x512",
       "type": "image/svg+xml",
       "purpose": "any"
-    },
-    {
-      "src": "data:image/svg+xml,%3csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='256' cy='256' r='256' fill='white'/%3e%3crect x='100' y='100' width='312' height='312' fill='black'/%3e%3cpath d='M171.272 412V100H256.545L404 305.091V100H447.636V412H362.363L214.909 214.909V412H171.272Z' fill='%2329DFFF'/%3e%3c/svg%3e",
-      "sizes": "192x192 512x512",
-      "type": "image/svg+xml",
-      "purpose": "maskable"
     }
   ]
 }
